2004-05-19  Bradley Bell  <btb@icculus.org>

	* main/menu.c: allow arbitrary (custom) resolution entry in
	change_res menu (d1x r1.14)

	* main/game.c, main/game.h, main/inferno.c, main/menu.c: inserted
	d1x-style res change menu (mostly works)

	* misc/args.c: use strnicmp instead of strncasecmp

2004-05-19  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c, main/inferno.c: add -gl_trilinear OGL
	command-line option (d1x r1.27)

	* main/inferno.c: restore inferno.c initialization of
	screen_compatible and use_double_buffer to 'normal' values, broken
	long long ago in one of the high res menu patches (d1x r1.30)

	* include/args.h, main/inferno.c, misc/args.c: allow arbitrary
	resolutions to be specified on command line (d1x r1.2, r1.29,
	r1.4) -- doesn't work yet

	* arch/linux/hmiplay.c: needs to include args.h now (d1x r1.9)

	* arch/linux/hmiplay.c: implement -nomusic for linux hmiplay (d1x
	r1.8)

	* arch/linux/hmiplay.c: correct linux hmiplay handling of midi 0
	volume song stop/starting (d1x r1.7)

2004-05-18  Matthew Mueller  <donut@dakotacom.net>

	* arch/linux/hmiplay.c: remove needless sleep on linux hmiplay
	startup (d1x r1.6)

	* arch/ogl/gr.c: fix off by .5 errors in ogl_upixelc and
	ogl_ulinec (d1x r1.29)

	* arch/ogl/ogl.c: fix ogl gr_ucircle (d1x r1.29)

	* arch/ogl/gr.c: fix off-by-one error in ogl_urect, right and
	bottom are inclusive not exclusive (d1x r1.28)

	* arch/ogl/ogl.c, include/ogl_init.h, main/polyobj.c: fix briefing
	spinning robot display in OGL (d1x r1.28, r1.20, r1.2)

	* arch/sdl/digi.c: fix typo

	* main/state.c: fix savegame thumbnail saving in OGL (d1x r1.6)

	* arch/win32/init.c, arch/win32/win32.c: move win32 window
	creation code from arch_init_start into arch_init to fix weirdness
	with --help (d1x r1.5, r1.6)

	* arch/linux/hmiplay.c: apply patch from bluecow to fix hmiplay
	sync issues and lack of midi reset (d1x r1.5)

	* arch/sdl/digi.c: fix crash on exit if sounds are still playing
	(d1x r1.8)
