@@ -1,4 +1,4 @@
-/* $Id: gr.c,v 1.20 2004-05-19 22:16:12 btb Exp $ */
+/* $Id: gr.c,v 1.21 2004-05-20 02:04:26 btb Exp $ */
 /*
  *
  * OGL video functions. - Added 9/15/99 Matthew Mueller
@@ -169,7 +169,11 @@ void ogl_get_verinfo(void){
 
 	con_printf(CON_VERBOSE, "gl vendor:%s renderer:%s version:%s extensions:%s\n",gl_vendor,gl_renderer,gl_version,gl_extensions);
 
-	ogl_intensity4_ok=1;ogl_luminance4_alpha4_ok=1;ogl_rgba2_ok=1;ogl_gettexlevelparam_ok=1;
+	ogl_intensity4_ok = 1;
+	ogl_luminance4_alpha4_ok = 1;
+	ogl_rgba2_ok = 1;
+	ogl_gettexlevelparam_ok = 1;
+	ogl_setgammaramp_ok = 1;
 
 #if 0 //WGL only, I think
 	dglMultiTexCoord2fARB = (glMultiTexCoord2fARB_fp)wglGetProcAddress("glMultiTexCoord2fARB");
@@ -227,9 +231,13 @@ void ogl_get_verinfo(void){
 	if ((t=FindArg("-gl_gettexlevelparam_ok"))){
 		ogl_gettexlevelparam_ok=atoi(Args[t+1]);
 	}
+	if ((t=FindArg("-gl_setgammaramp_ok")))
+	{
+		ogl_setgammaramp_ok = atoi(Args[t + 1]);
+	}
 
 	con_printf(CON_VERBOSE, "gl_arb_multitexture:%i gl_sgis_multitexture:%i\n",ogl_arb_multitexture_ok,ogl_sgis_multitexture_ok);
-	con_printf(CON_VERBOSE, "gl_intensity4:%i gl_luminance4_alpha4:%i gl_rgba2:%i gl_readpixels:%i gl_gettexlevelparam:%i\n",ogl_intensity4_ok,ogl_luminance4_alpha4_ok,ogl_rgba2_ok,ogl_readpixels_ok,ogl_gettexlevelparam_ok);
+	con_printf(CON_VERBOSE, "gl_intensity4:%i gl_luminance4_alpha4:%i gl_rgba2:%i gl_readpixels:%i gl_gettexlevelparam:%i gl_setgammaramp_ok:%i\n",ogl_intensity4_ok,ogl_luminance4_alpha4_ok,ogl_rgba2_ok,ogl_readpixels_ok,ogl_gettexlevelparam_ok, ogl_setgammaramp_ok);
 }
 
 
@@ -561,23 +569,42 @@ void gr_palette_clear()
 }
 
 
-void gr_palette_step_up( int r, int g, int b )
+int ogl_brightness_ok = 0;
+int ogl_setgammaramp_ok = 1;
+int ogl_brightness_r = 0, ogl_brightness_g = 0, ogl_brightness_b = 0;
+static int old_b_r = 0, old_b_g = 0, old_b_b = 0;
+
+void gr_palette_step_up(int r, int g, int b)
 {
-	if (gr_palette_faded_out) return;
+	if (gr_palette_faded_out)
+		return;
 
-//	if ( (r==last_r) && (g==last_g) && (b==last_b) ) return;
+	old_b_r = ogl_brightness_r;
+	old_b_g = ogl_brightness_g;
+	old_b_b = ogl_brightness_b;
 
-/*	last_r = r/63.0;
-	last_g = g/63.0;
-	last_b = b/63.0;
-	do_pal_step=(r || g || b);*/
-	
-	last_r = (r+gr_palette_gamma)/63.0;
-	last_g = (g+gr_palette_gamma)/63.0;
-	last_b = (b+gr_palette_gamma)/63.0;
+	ogl_brightness_r = r + gr_palette_gamma;
+	ogl_brightness_g = g + gr_palette_gamma;
+	ogl_brightness_b = b + gr_palette_gamma;
 
-	do_pal_step=(r || g || b || gr_palette_gamma);
-	
+	if (ogl_setgammaramp_ok &&
+	    (old_b_r != ogl_brightness_r ||
+	     old_b_g != ogl_brightness_g ||
+	     old_b_b != ogl_brightness_b))
+		ogl_brightness_ok = !ogl_setbrightness_internal();
+
+	if (!ogl_setgammaramp_ok || !ogl_brightness_ok)
+	{
+		last_r = ogl_brightness_r / 63.0;
+		last_g = ogl_brightness_g / 63.0;
+		last_b = ogl_brightness_b / 63.0;
+
+		do_pal_step = (r || g || b || gr_palette_gamma);
+	}
+	else
+	{
+		do_pal_step = 0;
+	}
 }
 
 //added on 980913 by adb to fix palette problems
@@ -597,6 +624,8 @@ void gr_palette_load( ubyte *pal )
  //palette = screen->format->palette;
 
  gr_palette_faded_out=0;
+
+	gr_palette_step_up(0, 0, 0); // make ogl_setbrightness_internal get run so that menus get brightened too.
 
  init_computed_colors();
 }
